# cloud_platform

master/: CMakeLists.txt  main.cpp
master/lib/: CMakeLists.txt  bfs.cpp  bfs.h  graph.cpp  graph.h  graph_runner.cpp  graph_runner.h  instances.cpp  instances.h  server.cpp  server.h  server_options.cpp  server_options.h  task.h
server_wrapper/: .gitignore  CMakeLists.txt  main  main.cpp
server_wrapper/lib/: CMakeLists.txt  server.cpp  server.h  subprocess.cpp  subprocess.h
